--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,6 @@ dist/
 # Log files
 *.log
 
-# Package files
-*.jar
-
 # Maven
 target/
 dist/
@@ -48,3 +45,4 @@ Thumbs.db
 *.mov
 *.wmv
 
+/.metadata/
